--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
-<html ng-app="LittleThings">
+<html ng-app="LittleThings" lang="en">
 <head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Little Things</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="/angular/angular.js"></script>
   <script src="/jquery/dist/jquery.js"></script>
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+  <title>The Little Things</title>
   <script src="/js/app.js"></script>
   <script src="/js/main.js"></script>
   <script src="/js/charities_controller.js"></script>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 <body>
-  <h1>The Little Things</h1>
-  <h3>we can do to make the world a better place</h3>
 
-  <button id="generate-fact">Generate a Fact</button>
-  <button id="generate-act">Generate an Act</button>
-  <div class="generated">
+  <div class="container header-bar">
+    <a id="logo" href=""></a>
+    <p>There are always <i>little things</i> we can do to make the world a better place</p>
   </div>
 
-  <h2>Get Involved!</h2>
-  <h4>Search non-profit organizations in your area via <a href="http://orghunter.com/advance_search">orghunter.com</a>.</h4>
-  <p>Results show only organizations that are tax deductible and in good standing with the IRS.</p>
-
-  <div ng-controller="CharitiesController as charities">
-  <!-- only allow user to fill in either City and state OR zipcode -->
-  <!-- if city is filled in and state is not, show error "please enter a state" -->
-  <!-- if zipcode is filled in, don't allow user to enter info in the city/state fields -->
-    <label>City:</label>
-    <input type="text" ng-model="charities.city" placeholder="i.e.:  Amityville">
-    <label>State<i>(initials in caps)</i>:</label>
-    <input type="text" ng-model="charities.state" placeholder="i.e.:  NY">
-    OR
-    <label>Zip Code<i>(5 digits)</i>:</label>
-    <input type="text" ng-model="charities.zip" placeholder="i.e.:  11701">
-    <button id="search" ng-click="charities.fetch()"><a href="./public/images/search.png"></a></button>
-
-
-    <ul id="charities">  
-    <!-- ng-if there are no charities matching that zip code, show error message (i.e. "-->
-    <!-- ng-if there is, show below info -->
-      <li ng-repeat="charity in charities.all">
-
-        <p><strong>{{charity.charityName}}</strong></p>
-        <p>Category: {{charity.category}}</p>
-        <p>{{charity.city}}, {{charity.state}} {{charity.zipCode}}</p>
-        <p>{{charity.missionStatement}}</p>
-        <a href="{{charity.website}}">{{charity.website}}</a>
-      </li>
-    </ul>
+  <div class="container">
+    <button id="generate-fact">Generate a Fact</button>
+    <button id="generate-act">Generate an Act</button>
+    <div class="generated">
+    </div>
   </div>
 
+  <div class="charities container-fluid">
+    <h2>Get Involved!</h2>
+    <h4>Search non-profit organizations in your area via <a href="http://orghunter.com/advance_search">orghunter.com</a>.</h4>
+    <p>Results show only organizations that are tax deductible and in good standing with the IRS.</p>
+
+    <div ng-controller="CharitiesController as charities">
+    <!-- only allow user to fill in either City and state OR zipcode -->
+    <!-- if city is filled in and state is not, show error "please enter a state" -->
+    <!-- if zipcode is filled in, don't allow user to enter info in the city/state fields -->
+      <label for="city">City:</label>
+      <input type="text" name="city" id="city-input" ng-model="charities.city" placeholder="i.e.:  Amityville" tabindex="1">
+      <label for="state">State<i>(initials in caps)</i>:</label>
+      <input type="text" name="state" id="state-input" ng-model="charities.state" placeholder="i.e.:  NY" tabindex="2">
+      OR
+      <label for="zip">Zip Code<i>(5 digits)</i>:</label>
+      <input type="text" name="zip" id="zip-input" ng-model="charities.zip" placeholder="i.e.:  11701" tabindex="3">
+      <button id="search" ng-click="charities.fetch()"><a href="./public/images/search.png"></a></button>
+
+      <ul id="charities">  
+      <!-- ng-if there are no charities matching that zip code, show error message (i.e. "-->
+      <!-- ng-if there is, show below info -->
+        <li ng-repeat="charity in charities.all">
+
+          <p><strong>{{charity.charityName}}</strong></p>
+          <p>Category: {{charity.category}}</p>
+          <p>{{charity.city}}, {{charity.state}} {{charity.zipCode}}</p>
+          <p>{{charity.missionStatement}}</p>
+          <a href="{{charity.website}}">{{charity.website}}</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <div class="container">
+      <p>THE LITTLE THINGS | Copyright @ Ona Boseroy 2016</p>
+    </div>
+  </footer>
 </body>
 </html>
