trying to search by both city and state or zip

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,6 +73,7 @@
             </div>
             <div class="col-md-3">
               <input style="vertical-align: middle;" id="search" type="image" ng-click="charities.fetch()" src="/images/search.png"></input>
+              <!-- have search button clickable by pressing 'enter' -->
             </div>
           </div> <!-- end of row -->
         </div> 
