--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,6 +89,7 @@
               <p>{{charity.city}}, {{charity.state}} {{charity.zipCode}}</p>
               <p>{{charity.missionStatement}}</p>
               <a href="{{charity.website}}">{{charity.website}}</a>
+              <!-- they don't have mission statments or websites so url it is -->
             </li>
           </ul>
         </div> <!-- end of div class:  container-fluid -->
